# cacao-nib

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  Cargo.toml  HANDOFF.md  LICENSE  MVP.md  README.md  caching.md  django_rule_ideas.txt  pyproject.toml  todos.txt  tox.ini
.github/workflows/: benchmarks.yml  main.yml  publish.yml
bench/: rules.py
demo/: __init__.py  pyproject.toml  rules.py  sample.py
demo/rules/: __init__.py
dev/bench/: data.js
python/cacao_nib/: __init__.py
python/nib/: __init__.py  builtin_rules.py  cli.py
python/tests/: test_basic.py  test_cli.py  test_parser.py  test_rules.py
src/: lib.rs  parser.rs  rules.rs  walk.rs
src/nib/: __init__.py  analysis.py  cache.py  cli.py  engine.py  output.py  parallel.py  utils.py
tests/: conftest.py  helpers.py  test_cache.py  test_cli.py  test_config.py  test_imports.py  test_project.py  test_rules.py
