[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "cacao-nib"
version = "0.1.0"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
scripts.nib = "nib.cli:main"

[dependency-groups]
dev = [
  "astpretty",
  "pytest",
]

[tool.hatch]
build.targets.wheel.packages = [ "src/nib" ]
build.targets.wheel.sources."src/nib" = "nib"

[tool.black]
target-version = [ "py311" ]
