[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "cacao-nib"
version = "0.1.0"
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "psutil",
]
scripts.nib = "nib.cli:main"

[dependency-groups]
dev = [
  "astpretty",
  # "pytest-xdist",
  "coverage",
  "pytest",
]

[tool.hatch]
build.targets.wheel.packages = [ "src/nib" ]
build.targets.wheel.sources."src/nib" = "nib"

[tool.black]
target-version = [ "py314" ]
