[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "cacao-nib"
version = "0.1.1"
description = "A pluggable framework for writing Python lint rules on the standard-library AST."
readme = "README.md"
keywords = [
  "ast",
  "code-quality",
  "linter",
  "plugin",
  "static-analysis",
]
license = "MIT"
authors = [
  { name = "Giannis Terzopoulos", email = "terzo.giannis@gmail.com" },
]
requires-python = ">=3.14"
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "psutil",
]
urls.Issues = "https://github.com/g-nie/cacao-nib/issues"
urls.Repository = "https://github.com/g-nie/cacao-nib"
scripts.nib = "nib.cli:main"

[dependency-groups]
dev = [
  "astpretty",
  "coverage",
  "pytest",
  # "pytest-xdist",
]

[tool.hatch]
build.targets.wheel.packages = [ "src/nib" ]
build.targets.wheel.sources."src/nib" = "nib"
build.targets.sdist.only-include = [
  "src",
  "tests",
  "demo",
  "bench",
  "tox.ini",
  "README.md",
  "LICENSE",
]

[tool.ruff]
extend-exclude = [ "demo/sample.py" ]
