[project]
name = "demo"
version = "0.1.0"
description = "Example third-party rules for cacao-nib"
requires-python = ">=3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "cacao-nib",
]

[tool.uv]
sources.cacao-nib = { path = "../", editable = true }

[tool.nib]
plugins = [ "rules" ]
